delete share lib

--- a/release-config.yaml
+++ b/release-config.yaml
@@ -13,3 +13,16 @@ appVersionSettings:
       mailbox-service: "1.0.0-e8334e55dcf"
       resync-service: "1.0.0-2537bd5b21b"
       user-service: "1.0.0-89c497bff80"
+    "2.0.0":
+      air-pollution-service: "1.0.0-test"
+      authentication-service: "1.0.0-test"
+      campaign-service: "1.0.0-test"
+      consent-service: "1.0.0-test"
+      expense-service: "1.0.0-test"
+      home-service: "1.0.0-test"
+      home-ui: "1.0.0-test"
+      insurance-service: "1.0.0-test"
+      loan-service: "1.0.0-test"
+      mailbox-service: "1.0.0-test"
+      resync-service: "1.0.0-test"
+      user-service: "1.0.0-test"
